--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+  
+html, body, main {
+  @apply bg-base;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* @apply border; */
+  @apply border-teal-600;
+  @apply bg-black;
+  /* @apply bg-white; */
+  @apply overflow-x-hidden;
+  @apply min-h-screen;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+html {
+  @apply overflow-x-hidden;
+}
+
+main {
+  /* @apply border; */
+  @apply w-screen h-screen;
+}
+
+
+
+/* ---------------- */
+.color-tryout {
+  color: #c571a5;
+  color: #8c86d6;
 }
