mask and icosahidron vertices

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,4 +35,7 @@ main {
   color: #c571a5;
   color: #8c86d6;
   color: #351430;
+  color: hsl(52, 29%, 6%);
+  color: #14130b;
+  color: rgb(20, 19, 11);
 }
